--- a/src/main/resources/templates/exito.html
+++ b/src/main/resources/templates/exito.html
@@ -15,7 +15,7 @@
 			
 				<h1 class="text-center">¡Felicidades!</h1>
 
-				<h1 class="display-4">Demostraste satisfactoriamente que no eres un robot y tu producto se ha guardado.</h1>
+				<h1 class="display-4">No eres un robot, tu producto se ha guardado! </h1>
 				<br>
 				<a href="/producto">Regresar</a>
 			
